删除推送阿里云docker，改为使用Dockerfile